--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <header>ALURAFLIX</header>
 
 
-ATRAVÉS DO ARANHA VERSO SUPERA O PRIMEIRO FILME?
-#homen-aranha
+<h1>ATRAVÉS DO ARANHA VERSO SUPERA O PRIMEIRO FILME?</h1>
+<p>#homen-aranha</p>
